# cmake-inspect

./: CMakeLists.txt  dummy.c  dummy.h  main.c
.github/workflows/: test.yml
